[package]
name = "femtoclaw-storage"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"
description = "FemtoClaw Storage — persistence, state snapshots, and execution history"
repository = "https://github.com/femtoclaw/femtoclaw-storage.git"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
